# CS-Projects

./: .gitattributes  README.md
210 - Computer Science I/Project 1/: alphacode.py
210 - Computer Science I/Project 3/: calpr.py  draw_barcode.py
210 - Computer Science I/Project 4/: jumbler.py
210 - Computer Science I/Project 5/: is_member.py  string_reverse.py
210 - Computer Science I/Project 6/: routes.py
210 - Computer Science I/Project 7/: eqanalysis.py
210 - Computer Science I/Project 8/: sdktactics.py
210/Project 1/: drawflower.py
210/Project 2/: counts.py  squareroot.py
211- Computer Science II/Project 1/: hello.ipynb
211- Computer Science II/Project 2/: crypto.ipynb
211- Computer Science II/Project 6/: gui.ipynb
211/Project 3/: planets.ipynb
211/Project 4/: orbits.ipynb
211/Project 5/: tk.ipynb
211/Project 7/: sqlite.ipynb
211/Project 8/: biome.ipynb
212/.metadata/: version.ini
313 - Data Structures/Assignment 1/: linkedlist.py  problem1-1.input  queue.py
313/Assignment 1/: README.txt  (+2 more)
315/: addMultNum.py
399 - Data Science/: 1_loan_warmup.ipynb  2_decision_tree.ipynb  3_gini.ipynb  4_tree_building.ipynb  5_kfold.ipynb  6_random_forests.ipynb  7_KNN.ipynb  8_ANN.ipynb
422 - Software Methodologies/: README.md
425 - Programming Languages/: A5-1.rkt  A5-1Shorthand.rkt  interp1.sml  interp2.sml  interp3.sml  interp_dcv.sml  interp_scv.sml  satisfy.sml  test.sml  type.sml
441 - Graphics/project2A/: CMakeLists.txt  Makefile  project2A.cxx
441/project1D/: CMakeLists.txt
441/project2B/: CMakeLists.txt
461/: README.md
(+225 files in other folders)
